--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-	"name": "inifile-D",
+	"name": "inifiled",
 	"description": "Compile Time Inifile Reader and Writer Generator",
 	"homepage": "https://github.com/burner/inifile-D",
 	"copyright": "Copyright © 2014, burner",
