--- a/.travis.yml
+++ b/.travis.yml
@@ -5,8 +5,9 @@ matrix:
   include:
     - d: dmd-2.069.0
     - d: dmd-2.068.0
-    - d: ldc-0.16.1
-    - d: gdc-4.9.0
+    - d: dmd-2.067.0
+#    - d: ldc-0.16.1
+#    - d: gdc-4.9.0
 
 script:
   - make
