--- a/.travis.yml
+++ b/.travis.yml
@@ -3,11 +3,15 @@ sudo: false
 
 matrix:
   include:
-    - d: dmd-2.069.0
-    - d: dmd-2.068.0
     - d: dmd-2.067.0
-#    - d: ldc-0.16.1
-#    - d: gdc-4.9.0
+    - d: dmd-2.068.0
+    - d: dmd-2.069.0
+    - d: dmd-2.070.2
+    - d: dmd-2.071.2
+    - d: dmd-2.072.2
+    - d: dmd-2.073.2
+    - d: ldc-1.0.0
+    - d: ldc-1.1.1
 
 script:
   - make
