--- a/filename.ini
+++ b/filename.ini
@@ -1,5 +1,5 @@
 ; A Person
-[initest.Person]
+[inifiled.Person]
 ; The firstname of the Person
 firstname="Foo"
 ; The lastname of the Person
@@ -14,19 +14,19 @@ someStrings=":::60180,asd,Hello,World"
 ; Some ints
 someInts="1,2"
 ; A Spose
-[initest.Spose]
+[inifiled.Spose]
 ; The firstname of the spose
 firstname="World"
 ; The age of the spose
 age="72"
 ; A House
-[initest.House]
+[inifiled.House]
 ; Number of Rooms
 rooms="5"
 ; Number of Floors
 floors="2"
 ; A Dog
-[initest.Dog]
+[inifiled.Dog]
 ; The name of the Dog
 name="Wuff"
 ; The food consumed
