--- a/.travis.yml
+++ b/.travis.yml
@@ -2,16 +2,14 @@ language: d
 sudo: false
 
 d:
+  - dmd-nightly
+  - dmd-beta
   - dmd
+  - ldc-beta
   - ldc
-  - dmd-2.069.0
-  - dmd-2.070.2
-  - dmd-2.071.2
   - dmd-2.072.2
   - dmd-2.073.2
-  - dmd-2.074.0
-  - ldc-1.0.0
-  - ldc-1.1.1
+  - dmd-2.074.1
 
 script:
   - dub test
