Add multiline support

--- a/test/dscanner.ini
+++ b/test/dscanner.ini
@@ -1,4 +1,7 @@
 [inifiled.StaticAnalysisConfig]
 style_check="disabled"
+multi_line= "+std.algorithm \
+-std.foo \
+"
 [inifiled.ModuleFilters]
 style_check = "+std.algorithm"
