Implement reading for items with custom names

--- a/test/filename.ini
+++ b/test/filename.ini
@@ -13,8 +13,8 @@ height="7331"
 someStrings=":::60180,asd,Hello,World"
 ; Some ints
 someInts="1,2"
-; A Spose
-[inifiled.Spose]
+; A Spouse
+[inifiled.Spouse]
 ; The firstname of the spose
 firstname="World"
 ; The age of the spose
