Allow quiet debug builds

--- a/package.json
+++ b/package.json
@@ -6,5 +6,16 @@
 	"authors": ["Robert burner Schadek"],
 	"license": "LGPL3",
 	"importPaths": ["source"],
-	"sourcePaths": ["source"]
+	"sourcePaths": ["source"],
+	"configurations": [
+		{
+			"name": "library",
+			"targetType": "library",
+			"versions": ["debugLogs"]
+		},
+		{
+			"name": "library-quiet",
+			"targetType": "library"
+		}
+	]
 }
