Fix: Spelling spose -> spouse
Signed-off-by: Diederik de Groot <ddegroot@talon.nl>

--- a/test/filename.ini
+++ b/test/filename.ini
@@ -15,9 +15,9 @@ someStrings=":::60180,asd,Hello,World"
 someInts="1,2"
 ; A Spouse
 [inifiled.Spouse]
-; The firstname of the spose
+; The firstname of the spouse
 firstname="World"
-; The age of the spose
+; The age of the spouse
 age="72"
 ; A House
 [inifiled.House]
